# estudandoDjango

./: README.md  pyproject.toml
estudandodjango/: db.sqlite3  manage.py
estudandodjango/estudandodjango/: asgi.py  settings.py  urls.py  wsgi.py
estudandodjango/polls/: models.py  tests.py  url.py  views.py
estudandodjango/polls/migrations/: 0001_initial.py
estudandodjango/polls/templates/polls/: detail.html
tests/: test_estudandodjango.py
