[tool.poetry]
name = "estudandoDjango"
version = "0.1.0"
description = ""
authors = ["alexnadrejastrow <alexnadre.jastrow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
